--- a/templates/change_state.html
+++ b/templates/change_state.html
@@ -2,13 +2,13 @@
 <html>
 <body>
 
-<form action="/Users/owntime/Downloads/Bootstrap模态登录框 2/index.html">
+<form method = "post" action = "http://localhost:5000/change">
 roomNum:<br>
 <input type="text" name="roomNum" value="YF101">
 <br>
 
 UserID:<br>
-<input type="text" name="UserID" value="17301002">
+<input type="text" name="userID" value="17301002">
 <br>
 
 Attribute:<br>
