--- a/templates/query1.html
+++ b/templates/query1.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form action="http://localhost:5000/query2">
+<form method = "post" action="http://localhost:5000/query2">
 Classroom:<br>
 <input type="text" name="classroom" value="YF101">
 <br>
