--- a/templates/tuijian.html
+++ b/templates/tuijian.html
@@ -2,10 +2,7 @@
 <html>
 <body>
 
-<form action="/Users/owntime/Downloads/Bootstrap模态登录框 2/index.html">
-roomNum:<br>
-<input type="text" name="roomNum" value="YF101">
-<br>
+<form method = "post" action = "http://localhost:5000/tuijian1">
 
 Loc:<br>
 <input type="text" name="loc" value="YF">
