--- a/templates/yuyue.html
+++ b/templates/yuyue.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form action="/Users/owntime/Downloads/Bootstrap模态登录框 2/index.html">
+<form method = "post" action="http://localhost:5000/yuyue1">
 roomNum:<br>
 <input type="text" name="roomNum" value="YF101">
 <br>
@@ -12,7 +12,7 @@ UserID:<br>
 <br>
 
 Time<br>
-<input type="text" name="time" value="周二下午两点">
+<input type="text" name="time" value="3">
 <br>
 
 Number:<br>
