--- a/templates/qxyy.html
+++ b/templates/qxyy.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form action="/Users/owntime/Downloads/Bootstrap模态登录框 2/index.html">
+<form method = "post" action="http://localhost:5000/qxyy1">
 
 UserID:<br>
 <input type="text" name="userID" value="17301002">
@@ -13,7 +13,7 @@ roomNum:<br>
 <br>
 
 Time<br>
-<input type="text" name="time" value="周二下午两点">
+<input type="text" name="time" value="3">
 <br>
 
 Number:<br>
