--- a/templates/register.html
+++ b/templates/register.html
@@ -2,9 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>注册</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
 </head>
 <body>
+<div class="login">
+    <div class="login_title">
+        <p><img src="{{ url_for('static', filename='images/jinghui.png') }}" style="width:80px;height:80px;margin-right:30px;"/>北京交通大学宿舍管理（系统名称）</p>
+    </div>
+    <div class="login_main">
+        <div class="main_left"></div>
+        <div class="main_right">
+            <div class="right_title">注册</div>
+            <form method = "post" action = "http://localhost:5000/register1">
+
+                <div class="type">
+                    <img src="{{ url_for('static', filename='images/username.png') }}" alt="">
+                    <input type="text"name="type" placeholder="请输入注册类型">
+                </div>
+
+                <div class="userID">
+                    <img src="{{ url_for('static', filename='images/username.png') }}" alt="">
+                    <input type="text" name="id" placeholder="请输入学号">
+                </div>
+
+                <div class="username">
+                    <img src="{{ url_for('static', filename='images/username.png') }}" alt="">
+                    <input type="text" name="name" placeholder="请输入用户名">
+                </div>
+
+                <div class="password">
+                    <img src="{{ url_for('static', filename='images/password.png') }}" alt="">
+                    <input type="text" name="password" placeholder="请输入密码">
+                </div>
+
+
+                <div class="yes_login"><td><input type = "submit" value = "提交"></td></div>
+
+
+            </form>
+        </div>
+    </div>
+    <div class="login_footer">
+        <p class="name">版权所有：系统分析第十小组</p>
+		<p>建议浏览器：IE8及以上、360、谷歌、Firefox v22</p>
+        <p>技术支持：第十小组 &nbsp;&nbsp;联系电话：022-xxxxxx  </p>
+
+    </div>
+</div>
 
 </body>
 </html>
