--- a/templates/youke.html
+++ b/templates/youke.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<form action="/Users/owntime/Downloads/Bootstrap模态登录框 2/index.html">
+<form method = "post" action="http://localhost:5000/isyouke">
 Classroom:<br>
 <input type="text" name="classroom" >
 <br>
